# FastAPI

./: README.md  alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: a7b2dfed1f72_base.py
