[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = ""
authors = ["shrikanth_p <shrikanthchoudary5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
